--- a/client/package.json
+++ b/client/package.json
@@ -44,5 +44,9 @@
     "caniuse-lite": "^1.0.30001612",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
