--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,6 @@
-
+MONGO_URI=mongodb+srv://egator:iJ5MV3mpl84XNJbR@cluster0.4vtjxuo.mongodb.net/mern-blog-tutorial
+PORT=5000
+JWT_SECRET=iJ5MV3mpl84XNJbRfghwasd
+CLOUDINARY_CLOUD_NAME=BlogKey
+CLOUDINARY_API_KEY=747747331185197
+CLOUDINARY_API_SECRET=XcUa1bmiDlQep82RGfSK70h4LMQ
