--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.17.0",
     "axios": "^1.6.8",
     "javascript-time-ago": "^2.5.10",
     "react": "^18.2.0",
@@ -41,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "caniuse-lite": "^1.0.30001612",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1"
